--- a/.env
+++ b/.env
@@ -1,32 +1,41 @@
+# =============================================================================
+# VAULT CONFIGURATION
+# =============================================================================
+VAULT_MASTER_KEY=dLFKOEOeP9NweU5DQOKcGGRy6C5MpVYvDv6CEo0mpJc
+
+# =============================================================================
+# SSH AZURE VM
+# =============================================================================
+VM_SSH_HOST=57.158.27.35
+VM_SSH_PORT=22
+VM_SSH_ROOT_USERNAME=esa_pbi_admin
+# VM_SSH_PASSWORD moved to vault
+
+# =============================================================================
 # PostgreSQL Backend Database
+# =============================================================================
 DB_HOST=esapbi.postgres.database.azure.com
 DB_PORT=5432
 DB_NAME=backend
 DB_USERNAME=esa_pbi_admin
-DB_PASSWORD=K9wKmtRfj3zJqRU
+# DB_PASSWORD moved to vault
 DB_SSLMODE=require
 
-# PostgreSQL Data Layer (esa_pbi)
-DATA_DB_HOST=esapbi.postgres.database.azure.com
-DATA_DB_PORT=5432
-DATA_DB_NAME=esa_pbi
-DATA_DB_USERNAME=esa_pbi_admin
-DATA_DB_PASSWORD=K9wKmtRfj3zJqRU
-DATA_DB_SSLMODE=require
-
+# =============================================================================
 # Microsoft OAuth
-MS_OAUTH_CLIENT_ID=412b9f8e-57c8-463b-9ad4-e01b90a9b20e
-MS_OAUTH_CLIENT_SECRET=RQX8Q~6rnoQrtoJLVCb_EkGeGOplbk1PcyzsNaFv
-MS_OAUTH_REDIRECT_URI=https://backend.redboxstorage.hk/oauth_callback.php
-MS_OAUTH_TENANT=9798bd2a-c0ae-49f1-b879-5344bf51f42a
+# =============================================================================
+MS_OAUTH_CLIENT_ID=a95a430f-94c8-4c9d-8522-f5e26cebe8ec
+# MS_OAUTH_CLIENT_SECRET moved to vault
+MS_OAUTH_REDIRECT_URI=https://backend.extraspace.com.sg/oauth_callback.php
+MS_OAUTH_TENANT=45d0dc96-5f92-4a48-93c1-edea9332dd55
 
+# =============================================================================
 # JWT Configuration
-JWT_SECRET=x7K9mP2vQ8wR4tY6uB3nC5hJ1fE0gA9s
+# =============================================================================
+# JWT_SECRET moved to vault
 JWT_EXPIRY=3600
 
+# =============================================================================
 # Scheduler
+# =============================================================================
 SCHEDULER_API_URL=http://localhost:5000
-
-# Legacy (kept for reference during migration)
-# RBS_API_BASE_URL=https://api.redboxstorage.hk
-# RBS_API_BEARER_TOKEN=...
