--- a/app/scheduler/python/.env.example
+++ b/app/scheduler/python/.env.example
@@ -3,17 +3,6 @@
 # ============================================
 # Copy this file to .env and fill in the values
 # DO NOT commit .env to version control
-#
-# SENSITIVE VALUES: Passwords, API keys, and secrets are stored
-# in the encrypted vault (.vault/secrets.enc). The vault_config()
-# function loads these securely at runtime.
-
-# ============================================
-# Vault Configuration
-# ============================================
-# Master key for decrypting secrets from vault
-# This key is generated during vault setup (scripts/setup_vault.py)
-VAULT_MASTER_KEY=your_vault_master_key_here
 
 # ============================================
 # Scheduler Database (backend)
@@ -23,7 +12,7 @@ SCHEDULER_DB_HOST=your-azure-postgres-server.postgres.database.azure.com
 SCHEDULER_DB_PORT=5432
 SCHEDULER_DB_NAME=backend
 SCHEDULER_DB_USER=your_scheduler_user
-# SCHEDULER_DB_PASSWORD stored in vault
+SCHEDULER_DB_PASSWORD=your_secure_password
 SCHEDULER_DB_SSL_MODE=require
 SCHEDULER_DB_POOL_SIZE=5
 SCHEDULER_DB_MAX_OVERFLOW=10
@@ -36,7 +25,7 @@ PBI_DB_HOST=your-azure-postgres-server.postgres.database.azure.com
 PBI_DB_PORT=5432
 PBI_DB_NAME=esa_pbi
 PBI_DB_USER=your_pbi_user
-# PBI_DB_PASSWORD stored in vault
+PBI_DB_PASSWORD=your_secure_password
 PBI_DB_SSL_MODE=require
 PBI_DB_POOL_SIZE=10
 PBI_DB_MAX_OVERFLOW=5
@@ -51,113 +40,45 @@ SCHEDULER_WEB_HOST=0.0.0.0
 SCHEDULER_WEB_PORT=5000
 
 # ============================================
+# SOAP API Configuration
+# ============================================
+# For pipelines that use SOAP API (rentroll, discount, mimo, etc.)
+SOAP_API_URL=https://your-soap-api-endpoint.com/api
+SOAP_API_USERNAME=your_soap_user
+SOAP_API_PASSWORD=your_soap_password
+
+# ============================================
+# SugarCRM API Configuration
+# ============================================
+SUGARCRM_URL=https://your-sugarcrm-instance.com
+SUGARCRM_USERNAME=your_crm_user
+SUGARCRM_PASSWORD=your_crm_password
+SUGARCRM_CLIENT_ID=your_client_id
+SUGARCRM_CLIENT_SECRET=your_client_secret
+
+# ============================================
+# Alert Configuration (Optional)
+# ============================================
+# Slack webhook for pipeline alerts
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/xxx/yyy/zzz
+SLACK_CHANNEL=#data-pipeline-alerts
+
+# Email alerts (optional)
+SMTP_HOST=smtp.your-provider.com
+SMTP_PORT=587
+SMTP_USER=alerts@your-domain.com
+SMTP_PASSWORD=your_smtp_password
+ALERT_FROM_ADDRESS=pbi-scheduler@your-domain.com
+ALERT_TO_ADDRESSES=data-team@your-domain.com
+
+# ============================================
 # Logging
 # ============================================
 LOG_LEVEL=INFO
 LOG_FILE=/var/log/pbi-scheduler/scheduler.log
 
 # ============================================
-# SOAP API Configuration
-# ============================================
-# For pipelines that use SOAP API (rentroll, discount, mimo, etc.)
-SOAP_BASE_URL=https://api.smdservers.net/CCWs_3.5/ReportingWs.asmx
-SOAP_CORP_CODE=your_corp_code
-SOAP_CORP_USER=your_soap_user
-# SOAP_API_KEY stored in vault
-# SOAP_CORP_PASSWORD stored in vault
-SOAP_TIMEOUT=60
-SOAP_RETRIES=3
-
-# ============================================
-# Redis Cache Configuration
-# ============================================
-REDIS_URL=redis://localhost:6379/0
-CACHE_DEFAULT_TTL=3600
-CACHE_ENABLED=false
-
-# ============================================
-# Connection Pool Settings
-# ============================================
-DB_POOL_SIZE=5
-DB_MAX_OVERFLOW=10
-DB_POOL_TIMEOUT=60
-DB_POOL_RECYCLE=1800
-
-# ============================================
-# Batch Processing Settings
-# ============================================
-BATCH_CHUNK_SIZE=500
-COMPRESSION_THRESHOLD=1024
-
-# ============================================
-# HTTP Client Settings
-# ============================================
-HTTP_POOL_CONNECTIONS=10
-HTTP_POOL_MAXSIZE=20
-HTTP_TOTAL_RETRIES=3
-HTTP_TIMEOUT=30
-
-# ============================================
-# RentRoll Pipeline Configuration
-# ============================================
-# NOTE: Pipeline-specific settings (location_codes, sql_chunk_size) are now
-# configured in config/pipelines.yaml under default_args for centralized management.
-# These env vars are kept as fallback for backwards compatibility.
-# RENTROLL_LOCATION_CODES=L001,L002,L003
-# RENTROLL_SQL_CHUNK_SIZE=300
-RENTROLL_OUTPUT_DIR=
-RENTROLL_START_YEAR=2025
-RENTROLL_START_MONTH=1
-RENTROLL_END_YEAR=2025
-RENTROLL_END_MONTH=12
-
-# ============================================
-# FX Rate Pipeline Configuration
-# ============================================
-# NOTE: Pipeline-specific settings are now configured in config/pipelines.yaml
-# under default_args for centralized management.
-# These env vars are kept as fallback for backwards compatibility.
-# FX_TARGET_CURRENCIES=USD,HKD,KRW,JPY,AUD
-# FX_HISTORICAL_START=2010-01-01
-# FX_SQL_CHUNK_SIZE=1000
-# FX_INCREMENTAL_DAYS=7
-
-# ============================================
-# SugarCRM REST API Configuration
-# ============================================
-SUGARCRM_BASE_URL=https://your-instance.sugarondemand.com
-SUGARCRM_USERNAME=your_crm_user
-# SUGARCRM_PASSWORD stored in vault
-SUGARCRM_CLIENT_ID=sugar
-# SUGARCRM_CLIENT_SECRET stored in vault (optional)
-SUGARCRM_PLATFORM=mobile
-SUGARCRM_API_VERSION=v11
-SUGARCRM_TIMEOUT=60
-
-# ============================================
-# SugarCRM Pipeline Configuration
-# ============================================
-# NOTE: Pipeline-specific settings are now configured in config/pipelines.yaml
-# under default_args for centralized management.
-# These env vars are kept as fallback for backwards compatibility.
-# SUGARCRM_MODULES=Leads,Contacts,Accounts,Opportunities
-# SUGARCRM_BATCH_SIZE=200
-# SUGARCRM_SQL_CHUNK_SIZE=500
-# SUGARCRM_INCREMENTAL_DAYS=7
-
-# ============================================
-# Alert Configuration (Optional)
-# ============================================
-# SLACK_WEBHOOK_URL stored in vault (optional)
-SLACK_CHANNEL=#data-pipeline-alerts
-SMTP_HOST=
-SMTP_PORT=587
-SMTP_USER=
-# SMTP_PASSWORD stored in vault (optional)
-ALERT_FROM_ADDRESS=
-ALERT_TO_ADDRESSES=
-
-# ============================================
 # Backend Web App Authentication
 # ============================================
-# BACKEND_AUTH_SECRET stored in vault (optional)
+# For web UI authentication (uses same auth as backend app)
+BACKEND_AUTH_SECRET=your_backend_auth_secret
